# pico-base-pcb

Firmware/: CMakeLists.txt
Firmware/mcp23017/: CMakeLists.txt
Firmware/mcp23017/src/pico/: mcp23017.c  mcp23017.h
Firmware/tests/: CMakeLists.txt  i2c_addr_test.c  i2c_button_test.c  i2c_interrupt_test.c
PicoBaseJump/: Project01.dcm  Project01.kicad_pcb  Project01.net  Project01.pro  Project01.sch  fp-info-cache  okdo-logo.kicad_mod  sym-lib-table
PicoBaseJump/Project01.pretty/: DIP-40_700_ELL.kicad_mod  DIP-40_700_PICO.kicad_mod  OKdo_Logo.kicad_mod  PinHeader_2x20_P2.54mm_Vertical_Pico.kicad_mod  PinSocket_1x20_P2.54mm_Pico_1_20.kicad_mod  PinSocket_1x20_P2.54mm_Pico_21_40.kicad_mod  TO-220-3_Vertical.kicad_mod  TerminalBlock_Phoenix_PT-1,5-2-3.5-H_1x02_P3.50mm_Horizontal.kicad_mod
PicoBaseJump/gerber-1.0/: Project01-B_Cu.gbr  Project01-B_Mask.gbr  Project01-B_SilkS.gbr  Project01-Edge_Cuts.gbr  Project01-F_Cu.gbr  Project01-F_Mask.gbr  Project01-F_SilkS.gbr  Project01.drl
